# ApertusFinal

./: .clang-format  CMakeLists.txt  README.md  main.cpp
header/: Debayer.hpp  Ppm.hpp  ProcessImage.hpp  RawImage.hpp
src/: Debayer.cpp  Ppm.cpp  ProcessImage.cpp  RawImage.cpp
